--- a/W_UP_01.rmd
+++ b/W_UP_01.rmd
@@ -5,11 +5,7 @@ date: "Spring 2025"
 output: html_document
 ---
 
-
-
-The report structure should include five sections.  see below
-
-
+The report structure should include five sections. see below
 
 ```{r include=FALSE,echo=FALSE}
 require(tigerstats)
@@ -21,7 +17,7 @@ mydata <- read.csv(file="pushups.csv")
 
 <!--In this section you explain what you are trying to show. Where did the data come from? What is the research or other question you are trying to answer?!-->
 
-Create an Rstudio project in your shared space on rstudio.cloud.  Using the dataset called pushups from the tigerstats package in R; answer the question posed by this null and alternate hypothesis in an html markdown document.
+Create an Rstudio project in your shared space on rstudio.cloud. Using the dataset called pushups from the tigerstats package in R; answer the question posed by this null and alternate hypothesis in an html markdown document.
 
 $H_0$: There is no difference between the average number of pushups of line vs skill players
 
@@ -41,6 +37,14 @@ $H_A$: The average number of pushups done by line players is statistically diffe
 
 <!--Graphical results here. Make sure to show your code. Provide appropriate labels for axes, giving units if possible, and provide a good title for the graph, too. Use the graphical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
+```{r}
+boxplot(pushups~position,data=mydata)
+```
+
+It looks like the skill players are doing more push ups than the line players.
+
+It looks like no line players did as many as 40 push ups. However, 25% of the skill players did about 35 push ups. 
+
 ### Numerical Descriptive Results
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
@@ -49,8 +53,6 @@ $H_A$: The average number of pushups done by line players is statistically diffe
 
 <!--State hypothesis clearly. Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc. Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
-
 # Discussion and Conclusion
 
 <!--Discussion and conclusion here. If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason. Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
-
